@@ -1,3 +1,12 @@
+nenolod     2006/09/25 09:03:29 UTC	(20060925-6451)
+  Log:
+  - use our enum {} for boolean_t, not the GCC builtin (portability)
+  
+
+  Changes:	Modified:
+  +5 -5		trunk/protocol/inspircd11.c (File Modified) 
+
+
 jilles      2006/09/24 23:55:08 UTC	(20060924-6449)
   Log:
   Don't behave strangely if the executable has been renamed.
